# SalatMV

./: .gitignore  Cargo.toml  README.md  build.rs  build_for_linux  build_for_linux.sh
src/: atolls.csv  db.rs  edit.rs  flag_parser.rs  functions.rs  inits.rs  islands.csv  main.rs  main.rs-old  old-main.rs  structs.rs
src/data/: atolls.csv  ptdata.csv
src/functions/: edit.rs  extras.rs  flag_parser.rs  format.rs  mod.rs
