[package]
name = "salat_mv"
version = "0.3.12"
authors = ["DefaultCube <quicksilverhq151@gmail.com>"]
license = "MIT"
description = "A tool to show prayer times in The Maldives"
readme = "README.md"
homepage = "https://github.com/Quicksilver151/SalatMV"
repository = "https://github.com/Quicksilver151/SalatMV"
keywords = ["cli", "salatmv", "salat_mv"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
confy = "0.5.1"
serde = { version = "1.0.151", features = ["derive"] }
signal-hook = "0.3.14"
uneval = "0.2.4"
